done configuring files in services