@@ -16,6 +16,7 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @CrossOrigin
 @RestController
@@ -32,13 +33,14 @@ public class OrderController {
             Authentication authentication
     ) {
         String userEmail = authentication.getName();
-        
+
         UUID orderId = orderService.createDraftOrder(request, userEmail);
         return ResponseEntity.ok(Map.of(
-                "orderId", orderId, 
+                "orderId", orderId,
                 "message", "Заявка (черновик) успешно создана"
         ));
     }
+
     @GetMapping("/{orderId}")
     public ResponseEntity<OrderResponse> getOrderById(
             @PathVariable UUID orderId,
@@ -48,23 +50,23 @@ public class OrderController {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new RuntimeException("Заказ не найден с ID: " + orderId));
 
-        if (!order.getUser().getEmail().equals(userEmail)) {
+        // Проверка доступа по email
+        if (!order.getUserEmail().equals(userEmail)) {
             throw new RuntimeException("У вас нет доступа к этому заказу");
         }
         return ResponseEntity.ok(OrderResponse.fromOrder(order));
     }
+
     @GetMapping
     public ResponseEntity<List<OrderResponse>> getMyOrders(Authentication authentication) {
         String email = authentication.getName();
-        List<Order> userOrders = orderRepository.findByUser_Email(email);
+        List<Order> userOrders = orderRepository.findByUserEmail(email);
         List<OrderResponse> responseList = userOrders.stream()
                 .map(OrderResponse::fromOrder)
-                .toList();
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(responseList);
     }
-
-
 
     @GetMapping("/{orderId}/contract")
     public ResponseEntity<byte[]> downloadContract(@PathVariable UUID orderId) {
@@ -75,9 +77,6 @@ public class OrderController {
                 .header("Content-Disposition", "attachment; filename=\"contract_" + orderId + ".pdf\"")
                 .body(pdfContent);
     }
-
-
-
 
     @PostMapping("/{orderId}/confirm-wagon")
     public ResponseEntity<OrderResponse> confirmWagon(
@@ -90,10 +89,9 @@ public class OrderController {
         Order updatedOrder = orderService.confirmWagonSelection(orderId, wagonId, totalPrice, userEmail);
         return ResponseEntity.ok(OrderResponse.fromOrder(updatedOrder));
     }
+
     @GetMapping("/{orderId}/dto")
     public OrderDTO getOrderDTO(@PathVariable UUID orderId) {
-        return orderRepository.findById(orderId)
-                .map(orderMapper::toDTO)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
+        return orderService.getOrderDTO(orderId);
     }
 }
